--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -49,6 +49,7 @@ allow 107.189.13.251;
 allow 107.189.13.253;
 allow 107.189.13.254;
 allow 107.189.13.91;
+allow 107.189.14.106;
 allow 107.189.14.4;
 allow 107.189.14.43;
 allow 107.189.1.80;
@@ -644,12 +645,11 @@ allow 193.233.133.109;
 allow 193.239.232.230;
 allow 193.26.115.43;
 allow 193.26.115.61;
-allow 193.35.18.49;
-allow 193.35.18.77;
 allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
+allow 194.163.157.49;
 allow 194.164.122.21;
 allow 194.26.192.77;
 allow 194.62.248.21;
@@ -844,7 +844,6 @@ allow 205.185.127.231;
 allow 209.127.245.250;
 allow 209.127.245.251;
 allow 209.135.168.10;
-allow 209.135.168.56;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -948,6 +947,7 @@ allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
 allow 23.155.8.104;
+allow 23.21.220.162;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -977,7 +977,6 @@ allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
 allow 2602:f9f3:0:2::8d;
-allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:2b4::1;
@@ -1037,6 +1036,7 @@ allow 2605:6400:30:ebb6:532:acc:65:31;
 allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
+allow 2605:6400:30:efba:dead::;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 allow 2605:6400:30:f174::;
@@ -1269,10 +1269,6 @@ allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:141:2c::1;
 allow 2a05:541:150:6::1;
-allow 2a05:b0c7:6388::1;
-allow 2a05:b0c7:67c6::1;
-allow 2a05:b0c7:6949::1;
-allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1549,7 +1545,6 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 41.216.183.87;
 allow 43.157.40.39;
 allow 45.11.59.28;
 allow 45.118.133.44;
@@ -1676,7 +1671,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.174.99.44;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1753,10 +1747,6 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.252.120.163;
-allow 84.54.51.61;
-allow 84.54.51.64;
-allow 84.54.51.68;
-allow 84.54.51.69;
 allow 85.17.9.83;
 allow 85.204.116.92;
 allow 85.204.116.93;
@@ -1852,10 +1842,6 @@ allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
 allow 94.230.208.148;
-allow 94.24.109.10;
-allow 94.24.109.20;
-allow 94.24.109.30;
-allow 94.24.109.40;
 allow 94.32.66.15;
 allow 94.75.225.81;
 allow 95.128.43.164;
