--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -134,7 +134,6 @@ allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
 allow 2602:f9f3:0:2::8d;
-allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:2b4::1;
@@ -194,6 +193,7 @@ allow 2605:6400:30:ebb6:532:acc:65:31;
 allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
+allow 2605:6400:30:efba:dead::;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 allow 2605:6400:30:f174::;
@@ -425,10 +425,6 @@ allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:141:2c::1;
 allow 2a05:541:150:6::1;
-allow 2a05:b0c7:6388::1;
-allow 2a05:b0c7:67c6::1;
-allow 2a05:b0c7:6949::1;
-allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
