--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -93,6 +93,7 @@ allow 108.181.69.243;
 allow 108.61.158.147;
 allow 108.61.189.136;
 allow 109.169.33.163;
+allow 109.223.213.172;
 allow 109.248.144.73;
 allow 109.248.147.137;
 allow 109.69.67.17;
@@ -297,7 +298,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -352,7 +352,6 @@ allow 185.220.101.130;
 allow 185.220.101.132;
 allow 185.220.101.133;
 allow 185.220.101.134;
-allow 185.220.101.135;
 allow 185.220.101.136;
 allow 185.220.101.137;
 allow 185.220.101.138;
@@ -844,6 +843,7 @@ allow 205.185.127.231;
 allow 209.127.245.250;
 allow 209.127.245.251;
 allow 209.135.168.10;
+allow 209.135.168.56;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -946,8 +946,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
-allow 23.21.220.162;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -972,11 +970,11 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
 allow 2602:f9f3:0:2::8d;
+allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:2b4::1;
@@ -1315,7 +1313,6 @@ allow 2a0b:f4c2:1::130;
 allow 2a0b:f4c2:1::132;
 allow 2a0b:f4c2:1::133;
 allow 2a0b:f4c2:1::134;
-allow 2a0b:f4c2:1::135;
 allow 2a0b:f4c2:1::137;
 allow 2a0b:f4c2:1::138;
 allow 2a0b:f4c2:1::139;
@@ -1525,6 +1522,7 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 3.221.254.118;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1634,6 +1632,7 @@ allow 51.38.81.135;
 allow 51.81.222.62;
 allow 51.81.254.14;
 allow 51.81.254.15;
+allow 51.81.254.3;
 allow 5.181.80.107;
 allow 5.182.86.212;
 allow 51.89.153.112;
@@ -1737,7 +1736,6 @@ allow 81.17.28.95;
 allow 82.118.242.36;
 allow 82.153.138.119;
 allow 82.153.138.208;
-allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
