--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -93,6 +93,7 @@ set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.61.158.147;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.169.33.163;
+set_real_ip_from 109.223.213.172;
 set_real_ip_from 109.248.144.73;
 set_real_ip_from 109.248.147.137;
 set_real_ip_from 109.69.67.17;
@@ -297,7 +298,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -352,7 +352,6 @@ set_real_ip_from 185.220.101.130;
 set_real_ip_from 185.220.101.132;
 set_real_ip_from 185.220.101.133;
 set_real_ip_from 185.220.101.134;
-set_real_ip_from 185.220.101.135;
 set_real_ip_from 185.220.101.136;
 set_real_ip_from 185.220.101.137;
 set_real_ip_from 185.220.101.138;
@@ -844,6 +843,7 @@ set_real_ip_from 205.185.127.231;
 set_real_ip_from 209.127.245.250;
 set_real_ip_from 209.127.245.251;
 set_real_ip_from 209.135.168.10;
+set_real_ip_from 209.135.168.56;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.37.94;
@@ -946,8 +946,6 @@ set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
-set_real_ip_from 23.155.8.104;
-set_real_ip_from 23.21.220.162;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.152;
 set_real_ip_from 23.94.211.25;
@@ -972,11 +970,11 @@ set_real_ip_from 2600:3c03::f03c:92ff:fed8:d9ef;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c08::f03c:94ff:fef8:9872;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::5;
 set_real_ip_from 2602:f9f3:0:2::8d;
+set_real_ip_from 2602:f9f3:0:2::91;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
@@ -1315,7 +1313,6 @@ set_real_ip_from 2a0b:f4c2:1::130;
 set_real_ip_from 2a0b:f4c2:1::132;
 set_real_ip_from 2a0b:f4c2:1::133;
 set_real_ip_from 2a0b:f4c2:1::134;
-set_real_ip_from 2a0b:f4c2:1::135;
 set_real_ip_from 2a0b:f4c2:1::137;
 set_real_ip_from 2a0b:f4c2:1::138;
 set_real_ip_from 2a0b:f4c2:1::139;
@@ -1525,6 +1522,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.195.60;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.221.254.118;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1634,6 +1632,7 @@ set_real_ip_from 51.38.81.135;
 set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.81.254.14;
 set_real_ip_from 51.81.254.15;
+set_real_ip_from 51.81.254.3;
 set_real_ip_from 5.181.80.107;
 set_real_ip_from 5.182.86.212;
 set_real_ip_from 51.89.153.112;
@@ -1737,7 +1736,6 @@ set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.118.242.36;
 set_real_ip_from 82.153.138.119;
 set_real_ip_from 82.153.138.208;
-set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
