--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -281,6 +281,10 @@ set_real_ip_from 2620:18c:0:192::147;
 set_real_ip_from 2620:18c:0:192::148;
 set_real_ip_from 2620:18c:0:192::149;
 set_real_ip_from 2620:18c:0:192::150;
+set_real_ip_from 2620:18c:0:192::171;
+set_real_ip_from 2620:18c:0:192::172;
+set_real_ip_from 2620:18c:0:192::173;
+set_real_ip_from 2620:18c:0:192::174;
 set_real_ip_from 2620:18c:0:192::211;
 set_real_ip_from 2620:18c:0:192::212;
 set_real_ip_from 2620:18c:0:192::213;
