--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -93,7 +93,6 @@ allow 108.181.69.243;
 allow 108.61.158.147;
 allow 108.61.189.136;
 allow 109.169.33.163;
-allow 109.223.213.172;
 allow 109.248.144.73;
 allow 109.248.147.137;
 allow 109.69.67.17;
@@ -195,7 +194,6 @@ allow 172.104.182.84;
 allow 172.104.214.41;
 allow 172.105.161.162;
 allow 172.232.164.52;
-allow 172.235.29.198;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
@@ -638,6 +636,7 @@ allow 193.218.118.161;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
+allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
 allow 193.239.232.230;
@@ -812,6 +811,7 @@ allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 201.23.12.101;
 allow 201.23.14.225;
 allow 201.23.16.249;
+allow 201.71.244.134;
 allow 202.182.99.129;
 allow 202.61.226.98;
 allow 202.94.246.210;
@@ -924,6 +924,8 @@ allow 23.137.253.108;
 allow 23.137.253.110;
 allow 23.137.253.27;
 allow 23.152.24.77;
+allow 23.153.248.33;
+allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
@@ -979,8 +981,9 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2da:0:32:5054:ff:fe6c:39dc;
+allow 2602:2da:0:32:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
@@ -1517,6 +1520,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
+allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:8398:111f:f05a:ac07;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -1547,7 +1551,6 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.223.235.151;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1707,6 +1710,7 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 54.81.131.33;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
@@ -1764,6 +1768,7 @@ allow 82.153.138.119;
 allow 82.153.138.208;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
