--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -93,7 +93,6 @@ deny 108.181.69.243;
 deny 108.61.158.147;
 deny 108.61.189.136;
 deny 109.169.33.163;
-deny 109.223.213.172;
 deny 109.248.144.73;
 deny 109.248.147.137;
 deny 109.69.67.17;
@@ -195,7 +194,6 @@ deny 172.104.182.84;
 deny 172.104.214.41;
 deny 172.105.161.162;
 deny 172.232.164.52;
-deny 172.235.29.198;
 deny 172.81.131.139;
 deny 172.81.131.156;
 deny 172.81.132.94;
@@ -638,6 +636,7 @@ deny 193.218.118.161;
 deny 193.218.118.173;
 deny 193.218.118.178;
 deny 193.218.118.182;
+deny 193.218.118.188;
 deny 193.218.118.89;
 deny 193.233.133.109;
 deny 193.239.232.230;
@@ -812,6 +811,7 @@ deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 deny 201.23.12.101;
 deny 201.23.14.225;
 deny 201.23.16.249;
+deny 201.71.244.134;
 deny 202.182.99.129;
 deny 202.61.226.98;
 deny 202.94.246.210;
@@ -924,6 +924,8 @@ deny 23.137.253.108;
 deny 23.137.253.110;
 deny 23.137.253.27;
 deny 23.152.24.77;
+deny 23.153.248.33;
+deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
@@ -979,8 +981,9 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:93ff:fe2b:34f6;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
-deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2da:0:32:5054:ff:fe6c:39dc;
+deny 2602:2da:0:32:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
@@ -1517,6 +1520,7 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
+deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:8398:111f:f05a:ac07;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -1547,7 +1551,6 @@ deny 31.129.22.65;
 deny 31.13.195.60;
 deny 31.133.0.210;
 deny 31.42.185.134;
-deny 3.223.235.151;
 deny 35.0.127.52;
 deny 37.114.41.119;
 deny 37.1.201.144;
@@ -1707,6 +1710,7 @@ deny 54.36.209.254;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
+deny 54.81.131.33;
 deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.171.137.169;
@@ -1764,6 +1768,7 @@ deny 82.153.138.119;
 deny 82.153.138.208;
 deny 82.221.128.191;
 deny 82.221.131.5;
+deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.77;
