--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -127,8 +127,9 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:93ff:fe2b:34f6;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
-deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2da:0:32:5054:ff:fe6c:39dc;
+deny 2602:2da:0:32:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
@@ -664,6 +665,7 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
+deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:8398:111f:f05a:ac07;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
