--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -110,7 +110,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 118.163.74.160;
-allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -295,7 +294,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -640,6 +638,8 @@ allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
 allow 193.239.232.230;
+allow 193.26.115.43;
+allow 193.26.115.61;
 allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
@@ -1200,6 +1200,7 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
+allow 2a02:25b0:aaaa:5258::;
 allow 2a02:2970:1001::4b;
 allow 2a02:29b8:dc01:1801::3;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
@@ -1572,6 +1573,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
 allow 43.157.40.39;
+allow 44.194.136.151;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1645,6 +1647,7 @@ allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
+allow 46.36.38.151;
 allow 46.38.255.27;
 allow 47.250.38.29;
 allow 5.104.86.6;
@@ -1668,7 +1671,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.103.190;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1710,7 +1712,6 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 54.81.131.33;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
