--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -345,6 +345,7 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 set_real_ip_from 2a02:16d0:0:5::1;
+set_real_ip_from 2a02:25b0:aaaa:5258::;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:29b8:dc01:1801::3;
 set_real_ip_from 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
