--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -122,6 +122,7 @@ allow 2400:d321:2195:2012::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 2402:1f00:8201:61::2d91:af20;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:93ff:fe2b:34f6;
