--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -114,6 +114,7 @@ allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
+allow 125.253.41.169;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.15.186;
@@ -734,7 +735,6 @@ allow 2001:620:20d0::20;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
-allow 2001:678:6d4:5130::2;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
@@ -1309,6 +1309,7 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
+allow 2a05:541:141:2c::1;
 allow 2a05:541:150:6::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
@@ -1565,6 +1566,7 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 34.192.229.132;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1586,7 +1588,6 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.219.142.92;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1766,6 +1767,7 @@ allow 77.48.28.236;
 allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
+allow 77.83.246.112;
 allow 77.90.41.191;
 allow 77.90.41.199;
 allow 77.90.42.201;
@@ -1843,7 +1845,6 @@ allow 91.202.5.104;
 allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
-allow 91.208.206.47;
 allow 91.208.75.153;
 allow 91.208.75.156;
 allow 91.208.75.178;
