--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -32,7 +32,6 @@ allow 2001:620:20d0::20;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
-allow 2001:678:6d4:5130::2;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
@@ -445,6 +444,7 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
+allow 2a05:541:141:2c::1;
 allow 2a05:541:150:6::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
